--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -8,13 +8,16 @@
 	<string name="menu_keyboard">Keyboard</string>
 	<string name="menu_reset">Reset</string>
 	<string name="menu_interrupt">Interrupt</string>
+	<string name="menu_scale">Scale</string>
 	<string name="btn_quit">Quit</string>
 	<string name="btn_continue">Continue</string>
 	<string name="btn_ok">OK</string>
-	<string name="aboutText">based on Mini vMac 3.1.3 by Paul C. Pratt\n\nMini vMac contains the work of many people.\nThis version is maintained by:\nGil Osher \n\nBased on a version by:\nJesús A. Álvarez, http://namedfork.net\n\nMini vMac is distributed under the terms of the GNU Public License, version 2.\n\nMini vMac is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.</string>
+	<string name="aboutText">based on Mini vMac 3.1.3 by Paul C. Pratt\n\nMini vMac contains the work of many people.\nThis version is maintained by:\nGil Osher, http://dolfin.github.com/minivmac4android\n\nBased on a version by:\nJesús A. Álvarez, http://namedfork.net\n\nMini vMac is distributed under the terms of the GNU Public License, version 2.\n\nMini vMac is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.</string>
 	<string name="version">version</string>
 	<string name="build">build</string>
-	<string name="errNoDataDir">cannot read data directory:</string>
-	<string name="errNoROM">cannot read ROM file:</string>
-	<string name="errInitEmu">coud not initialize emulation</string>
+	<string name="errNoDataDir">Cannot read data directory:</string>
+	<string name="errNoDataDir2">This directory should contain a ROM file named \&quot;vMac.ROM\&quot; and the disk images.\n\nPlease refer http://minivmac.sourceforge.net/doc/start.html for more info.</string>
+	<string name="errNoROM">Cannot find ROM file:</string>
+	<string name="errNoROM2">This file should be named \&quot;vMac.ROM\&quot; and should be put on a folder named \&quot;minivmac\&quot; on you external SD card, together with the disk images.\n\nPlease refer http://minivmac.sourceforge.net/doc/start.html for more info.</string>
+	<string name="errInitEmu">Could not initialize emulation</string>
 </resources>
