--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="app_name">Mini vMac</string>
+    <string name="app_name">Mini vMac II</string>
 	<string name="menu_settings">Settings</string>
 	<string name="menu_about">About</string>
 	<string name="menu_insert_disk">Insert Disk</string>
@@ -17,9 +17,9 @@
 	<string name="version">version</string>
 	<string name="build">build</string>
 	<string name="errNoDataDir">Cannot read data directory:</string>
-	<string name="errNoDataDir2">This directory should contain a ROM file named \&quot;vMac.ROM\&quot; and the disk images.\n\nPlease refer http://minivmac.sourceforge.net/doc/start.html for more info.</string>
+	<string name="errNoDataDir2">This directory should contain a ROM file named \&quot;MacII.ROM\&quot; and the disk images.\n\nPlease refer http://minivmac.sourceforge.net/doc/start.html for more info.</string>
 	<string name="errNoROM">Cannot find ROM file:</string>
-	<string name="errNoROM2">This file should be named \&quot;vMac.ROM\&quot; and should be put on a folder named \&quot;minivmac\&quot; on you external SD card, together with the disk images.\n\nPlease refer http://minivmac.sourceforge.net/doc/start.html for more info.</string>
+	<string name="errNoROM2">This file should be named \&quot;MacII.ROM\&quot; and should be put on a folder named \&quot;minivmac\&quot; on you external SD card, together with the disk images.\n\nPlease refer http://minivmac.sourceforge.net/doc/start.html for more info.</string>
 	<string name="errInitEmu">Could not initialize emulation</string>
 	<string name="errCreateDisk">Sorry, I couldn\'t create the disk because an I/O error occurred. Make sure you got enough space on your SD card.</string>
 	<string name="errFileExist">File already exists. Please choose a different disk name.</string>
