Upgrade gradle and NDK

--- a/minivmac/src/macII/res/values/strings.xml
+++ b/minivmac/src/macII/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Mini vMac II</string>
     <string name="romFileName">MacII.ROM</string>
     <string name="aboutTitle">Mini vMac II for Android</string>
+    <string name="moduleName">mnvmcoreii</string>
 </resources>
