--- a/minivmac/src/main/res/values/strings.xml
+++ b/minivmac/src/main/res/values/strings.xml
@@ -9,15 +9,15 @@
 	<string name="btn_quit">Quit</string>
 	<string name="btn_continue">Continue</string>
 	<string name="btn_ok">OK</string>
-	<string name="aboutText">based on Mini vMac 3.3.3 by Paul C. Pratt\n\nMini vMac contains the work of many people.\nThis version is maintained by:\nGil Osher (http://dolfin.github.com/minivmac4android)\n\nBased on a version by:\nJesús A. Álvarez (http://namedfork.net)\n\nMini vMac is distributed under the terms of the GNU Public License, version 2.\n\nMini vMac is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.</string>
+	<string name="aboutText">based on Mini vMac 3.5.8 by Paul C. Pratt\n\nMini vMac contains the work of many people.\nThis version is maintained by:\nGil Osher (http://miniv.gil.ninja)\n\nBased on a version by:\nJesús A. Álvarez (http://namedfork.net)\n\nMini vMac is distributed under the terms of the GNU Public License, version 2.\n\nMini vMac is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.</string>
 	<string name="thirdparty_license">Copyright (c) 2014, Austin Andrews (http://materialdesignicons.com/),\nwith Reserved Font Name Material Design Icons.\nCopyright (c) 2014, Google (http://www.google.com/design/)\nuses the license at https://github.com/google/material-design-icons/blob/master/LICENSE\n\nThis Font Software is licensed under the SIL Open Font License, Version 1.1.\nThis license is copied below, and is also available with a FAQ at:\nhttp://scripts.sil.org/OFL</string>
 	<string name="thirdparty_license_header">Third Party Licenses</string>
 	<string name="version">version</string>
 	<string name="build">build</string>
 	<string name="permissionsExplain">Mini vMac need access to your external storage in order to read the ROM file and to read and write to the disk images.</string>
 	<string name="errNoPermissions">Sorry, but Mini vMac must have external storage permissions to start.</string>
-	<string name="errNoDataDir">Cannot read data directory: %1$s\n\nThis directory should contain a ROM file named \&quot;%2$s\&quot; and the disk images.\n\nPlease refer http://minivmac.sourceforge.net/doc/start.html for more info.</string>
-	<string name="errNoROM">Cannot find ROM file: %1$s\n\nThis file should be named \&quot;%2$s\&quot; and should be put on a folder named \&quot;minivmac\&quot; on you external SD card, together with the disk images.\n\nPlease refer http://minivmac.sourceforge.net/doc/start.html for more info.</string>
+	<string name="errNoDataDir">Cannot read data directory: %1$s\n\nThis directory should contain a ROM file named \&quot;%2$s\&quot; and the disk images.\n\nPlease refer https://www.gryphel.com/c/minivmac/start.html for more info.</string>
+	<string name="errNoROM">Cannot find ROM file: %1$s\n\nThis file should be named \&quot;%2$s\&quot; and should be put on a folder named \&quot;minivmac\&quot; on you external SD card, together with the disk images.\n\nPlease refer https://www.gryphel.com/c/minivmac/start.html for more info.</string>
 	<string name="errInitEmu">Sorry, Could not initialize emulation</string>
 	<string name="errCreateDisk">Sorry, I couldn\'t create the disk because an I/O error occurred. Make sure you got enough space on your SD card.</string>
 	<string name="errFileExist">File already exists. Please choose a different disk name.</string>
@@ -42,4 +42,8 @@
 	<string name="prefs_start">How to start&#8230;</string>
 	<string name="prefs_home">Visit our website&#8230;</string>
 	<string name="prefs_about">About</string>
+
+	<!-- URLs -->
+	<string name="url_homepage">http://miniv.gil.ninja/</string>
+	<string name="url_start">https://www.gryphel.com/c/minivmac/start.html</string>
 </resources>
