Update Gradle version Increased min SDK version to 16 Increased target SDK version to 31 Migrated to androidx Added Rom selection preference Added Disk Management screen with options to add and remove disks to local app storage

--- a/minivmac/src/main/res/values/strings.xml
+++ b/minivmac/src/main/res/values/strings.xml
@@ -9,6 +9,11 @@
 	<string name="btn_quit">Quit</string>
 	<string name="btn_continue">Continue</string>
 	<string name="btn_ok">OK</string>
+	<string name="btn_yes">Yes</string>
+	<string name="btn_no">No</string>
+	<string name="removeDiskWarning">Are you sure you want to remove the disk \"%1$s\"?\nAll it\'s content will be deleted permanently!</string>
+	<string name="noDiskSelected">No Disk was selected.</string>
+	<string name="cantRemoveDisk">Unable to remove the disk \"%1$s\".</string>
 	<string name="aboutText">based on Mini vMac 36.04 by Paul C. Pratt\n\nMini vMac contains the work of many people.\nThis version is maintained by:\nGil Osher (http://miniv.gil.ninja)\n\nBased on a version by:\nJesús A. Álvarez (http://namedfork.net)\n\nMini vMac is distributed under the terms of the GNU Public License, version 2.\n\nMini vMac is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.</string>
 	<string name="thirdparty_license">Copyright (c) 2014, Austin Andrews (http://materialdesignicons.com/),\nwith Reserved Font Name Material Design Icons.\nCopyright (c) 2014, Google (http://www.google.com/design/)\nuses the license at https://github.com/google/material-design-icons/blob/master/LICENSE\n\nThis Font Software is licensed under the SIL Open Font License, Version 1.1.\nThis license is copied below, and is also available with a FAQ at:\nhttp://scripts.sil.org/OFL</string>
 	<string name="thirdparty_license_header">Third Party Licenses</string>
@@ -26,10 +31,16 @@
 	<string name="name">Name:</string>
 	<string name="size">Size:</string>
 	<string name="create">Create</string>
+	<string name="add">Add</string>
+	<string name="remove">Remove</string>
 	<string name="sizeTextStub">125.00 MiB</string>
 	<string name="creatingDisk">Creating disk. Please wait&#8230;</string>
-	
+
 	<!-- Settings view -->
+	<string name="pref_emulator_title">Emulator</string>
+	<string name="pref_rom">ROM File...</string>
+	<string name="pref_rom_summ">No ROM file was selected</string>
+	<string name="pref_disk_manager">Disks Images...</string>
 	<string name="pref_view_title">View</string>
 	<string name="pref_scale">Scale</string>
 	<string name="pref_scale_summ">Fit target screen to host screen</string>
