--- a/minivmac/src/main/res/values/strings.xml
+++ b/minivmac/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 	<string name="menu_insert_disk">Insert Disk</string>
 	<string name="menu_keyboard">Keyboard</string>
 	<string name="menu_create_disk">Create a new disk&#8230;</string>
-	<string name="menu_select_disk">Select a disk&#8230;</string>
+	<string name="menu_select_disk">Import file&#8230;</string>
 	<string name="btn_quit">Quit</string>
 	<string name="btn_continue">Continue</string>
 	<string name="btn_ok">OK</string>
@@ -31,10 +31,12 @@
 	<string name="name">Name:</string>
 	<string name="size">Size:</string>
 	<string name="create">Create</string>
+	<string name="newDisk">New</string>
 	<string name="add">Add</string>
 	<string name="remove">Remove</string>
 	<string name="sizeTextStub">125.00 MiB</string>
 	<string name="creatingDisk">Creating disk. Please wait&#8230;</string>
+	<string name="send_to">Send To</string>
 
 	<!-- Settings view -->
 	<string name="pref_emulator_title">Emulator</string>
