--- a/minivmac/src/macPlus/res/values/strings.xml
+++ b/minivmac/src/macPlus/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="romFileName">vMac.ROM</string>
     <string name="aboutTitle">Mini vMac for Android</string>
     <string name="moduleName">mnvmcoreplus</string>
+    <string name="model">Macintosh Plus</string>
 </resources>
