--- a/minivmac/src/main/res/values/strings.xml
+++ b/minivmac/src/main/res/values/strings.xml
@@ -71,6 +71,11 @@
 	<string name="prefs_about">About</string>
 	<string name="rom_load_error">Unable to load this ROM file. Please choose a valid ROM file.</string>
 
+	<string name="welcome_title">Welcome to %s!</string>
+	<string name="welcome_desc">For this emulator to work, a valid %s ROM file must be provided. Please click the \"Browse&#8230;\" button to select the file from your device.\n\nPlease refer https://www.gryphel.com/c/minivmac/start.html for more info.\n
+	</string>
+	<string name="welcome_browse">Browse&#8230;</string>
+
 	<!-- URLs -->
 	<string name="url_homepage">http://miniv.gil.ninja/</string>
 	<string name="url_start">https://www.gryphel.com/c/minivmac/start.html</string>
