--- a/minivmac/src/main/res/values/strings.xml
+++ b/minivmac/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 	<string name="menu_create_disk">Create a new disk&#8230;</string>
 	<string name="menu_import_file">Import file&#8230;</string>
 	<string name="menu_manage_disks">Manage Disks&#8230;</string>
+	<string name="menu_keyboards">Keyboards&#8230;</string>
 	<string name="btn_quit">Quit</string>
 	<string name="btn_continue">Continue</string>
 	<string name="btn_ok">OK</string>
@@ -68,6 +69,9 @@
 	<string name="prefs_speed_4">16x</string>
 	<string name="prefs_speed_5">32x</string>
 	<string name="prefs_speed_A">All Out</string>
+	<string name="prefs_kbd_us">English (US)</string>
+	<string name="prefs_kbd_es">Spanish</string>
+	<string name="prefs_kbd_he">Hebrew</string>
 	<string name="prefs_reset">Reset</string>
 	<string name="prefs_interrupt">Interrupt</string>
 	<string name="pref_learn_title">Learn</string>
