Added additional keyboard layouts: English (British), French, and Spanish (ISO). Fixed keyboard layout for English (U.S.), Hebrew, and Spanish. Fixed an issue causing the keyboard not to rotate well.

--- a/minivmac/src/main/res/values/strings.xml
+++ b/minivmac/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
 	<string name="pref_scroll_summ">Use the arrow keys to scroll the screen</string>
 	<string name="pref_control_title">Control</string>
 	<string name="prefs_speed">Speed&#8230;</string>
+	<string name="prefs_speed_title">Select Speed:</string>
 	<string name="prefs_speed_0">1x</string>
 	<string name="prefs_speed_1">2x</string>
 	<string name="prefs_speed_2">4x</string>
@@ -69,9 +70,13 @@
 	<string name="prefs_speed_4">16x</string>
 	<string name="prefs_speed_5">32x</string>
 	<string name="prefs_speed_A">All Out</string>
-	<string name="prefs_kbd_us">English (US)</string>
-	<string name="prefs_kbd_es">Spanish</string>
+	<string name="prefs_keyboards_title">Select Keyboard Layout:</string>
+	<string name="prefs_kbd_gb">English (British)</string>
+	<string name="prefs_kbd_us">English (U.S.)</string>
+	<string name="prefs_kbd_fr">French</string>
 	<string name="prefs_kbd_he">Hebrew</string>
+	<string name="prefs_kbd_es">Spanish</string>
+	<string name="prefs_kbd_es_iso">Spanish (ISO)</string>
 	<string name="prefs_reset">Reset</string>
 	<string name="prefs_interrupt">Interrupt</string>
 	<string name="pref_learn_title">Learn</string>
