Allow to restart the emulator after a shutdown without killing the app

--- a/minivmac/src/main/res/values/strings.xml
+++ b/minivmac/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
 	<string name="copyingFile">Copying File…</string>
 	<string name="validatingRom">Validating ROM…</string>
 	<string name="copyingRom">Copying ROM…</string>
+	<string name="btn_restart_emulator">Restart Emulator</string>
 
 	<!-- Settings view -->
 	<string name="pref_emulator_title">Emulator</string>
