--- a/minivmac/src/main/res/values/strings.xml
+++ b/minivmac/src/main/res/values/strings.xml
@@ -22,8 +22,8 @@
 	<string name="privacyPolicy"><a href="https://miniv.gil.ninja/privacypolicy.html">Privacy Policy</a></string>
 	<string name="thirdparty_license">Copyright (c) 2014, Austin Andrews (http://materialdesignicons.com/),\nwith Reserved Font Name Material Design Icons.\nCopyright (c) 2014, Google (http://www.google.com/design/)\nuses the license at https://github.com/google/material-design-icons/blob/master/LICENSE\n\nThis Font Software is licensed under the SIL Open Font License, Version 1.1.\nThis license is copied below, and is also available with a FAQ at:\nhttp://scripts.sil.org/OFL</string>
 	<string name="thirdparty_license_header">Third Party Licenses</string>
-	<string name="version">version</string>
-	<string name="build">build</string>
+	<string name="version">version %s</string>
+	<string name="build">build %d</string>
 	<string name="permissionsExplain">Mini vMac need access to your external storage in order to read the ROM file and to read and write to the disk images.</string>
 	<string name="errNoPermissions">Sorry, but Mini vMac must have external storage permissions to start.</string>
 	<string name="errNoDataDir">Cannot read data directory: %1$s\n\nThis directory should contain a ROM file named \&quot;%2$s\&quot; and the disk images.\n\nPlease refer https://www.gryphel.com/c/minivmac/start.html for more info.</string>
